# pymach

./: .gitignore  README.md  pyproject.toml
examples/: float_add.py  hello_world.py  int_add.py  libfunc.py  return_literal.py
pymach/: __init__.py  _pymach.c  pymach.py
pymach.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
